--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -40,7 +40,7 @@
   <rule ref="WordPress.NamingConventions.PrefixAllGlobals">
       <properties>
           <property name="prefixes" type="array">
-              <element value="Block_Theme_Maintenance"/>
+              <element value="btmm"/>
           </property>
       </properties>
   </rule>
