--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -12,7 +12,7 @@
 
   <!-- Exclude filename rule for main plugin file -->
   <rule ref="WordPress.Files.FileName.InvalidClassFileName">
-    <exclude-pattern>block-theme-maintenance.php</exclude-pattern>
+    <exclude-pattern>downtime.php</exclude-pattern>
   </rule>
 
   <!-- How to scan -->
@@ -40,7 +40,7 @@
   <rule ref="WordPress.NamingConventions.PrefixAllGlobals">
       <properties>
           <property name="prefixes" type="array">
-              <element value="btmm"/>
+              <element value="dtmm"/>
           </property>
       </properties>
   </rule>
@@ -48,7 +48,7 @@
   <rule ref="WordPress.WP.I18n">
       <properties>
           <property name="text_domain" type="array">
-              <element value="block-theme-maintenance"/>
+              <element value="downtime"/>
           </property>
       </properties>
   </rule>
